--- a/src/css/style.css
+++ b/src/css/style.css
@@ -15,7 +15,7 @@
     @apply max-w-7xl mx-auto px-3to9;
   }
   .sec-title {
-    @apply font-semibold text-32to48 text-black mb-4 relative w-max mx-auto px-6 xl:px-8;
+    @apply font-bold text-32to48 text-black mb-6 relative w-max mx-auto px-6 xl:px-8;
     line-height: 1;
 
     .left-dot {
