--- a/src/css/style.css
+++ b/src/css/style.css
@@ -80,13 +80,31 @@
 }
 
 @layer utilities {
-  .js-active-menu :first-child {
+  /* For menu links */
+  .menu-link {
+    @apply font-light text-2xl lg:text-3xl text-white; /* Text styling */
+    @apply transition-all duration-300 hover:text-[#fa5f6b]; /* Interaction styling */
+    @apply relative after:absolute after:left-0 after:-bottom-1 after:w-0 after:h-px after:bg-[#fa5f6b]; /* 'after' main styles */
+    @apply after:transition-all after:duration-300 hover:after:w-full; /* 'after' interaction styles */
+  }
+
+  /* For when menu is active*/
+  .js-active-menu .menu-overlay {
+    @apply opacity-100 scale-[100];
+  }
+  .js-active-menu .menu-nav {
+    @apply opacity-100 visible;
+  }
+  .js-active-menu .menu-btn {
+    @apply bg-[#fff6] hover:bg-[#fff4];
+  }
+  .js-active-menu .menu-btn :first-child {
     @apply -mb-px rotate-45;
   }
-  .js-active-menu :nth-child(2) {
+  .js-active-menu .menu-btn :nth-child(2) {
     @apply hidden;
   }
-  .js-active-menu :last-child {
+  .js-active-menu .menu-btn :last-child {
     @apply mb-0 -mt-px -rotate-45;
   }
 }
