--- a/src/tailwind/style.css
+++ b/src/tailwind/style.css
@@ -12,14 +12,13 @@
 @layer components {
   /* Scroll Bar */
   ::-webkit-scrollbar {
-    @apply w-3 bg-white border border-l-red-200;
-  }
+    @apply w-3 bg-white;
 
-  ::-webkit-scrollbar-thumb {
-    @apply rounded-md bg-[#fa5f6b];
-
-    &:hover {
-      @apply bg-[#fe809e];
+    &-thumb {
+      @apply rounded-md bg-[#fa5f6b];
+      &:hover {
+        @apply bg-[#fe809e];
+      }
     }
   }
 
@@ -40,6 +39,29 @@
   }
   .sec-subtitle {
     @apply text-16to18 text-black text-center mb-8to20;
+  }
+
+  /* Active Menu*/
+  .js-active-menu {
+    .menu-overlay {
+      @apply opacity-100 scale-[100];
+    }
+    .menu-nav {
+      @apply opacity-100 visible;
+    }
+    .menu-btn {
+      @apply bg-[#fff6] hover:bg-[#fff4];
+
+      :first-child {
+        @apply -mb-px rotate-45;
+      }
+      :nth-child(2) {
+        @apply hidden;
+      }
+      :last-child {
+        @apply mb-0 -mt-px -rotate-45;
+      }
+    }
   }
 
   /* Buttons */
@@ -99,25 +121,5 @@
     @apply transition-all duration-300 hover:text-[#fa5f6b]; /* Interaction styling */
     @apply relative after:absolute after:left-0 after:-bottom-1 after:w-0 after:h-px after:bg-[#fa5f6b]; /* 'after' main styles */
     @apply after:transition-all after:duration-300 hover:after:w-full; /* 'after' interaction styles */
-  }
-
-  /* For when menu is active*/
-  .js-active-menu .menu-overlay {
-    @apply opacity-100 scale-[100];
-  }
-  .js-active-menu .menu-nav {
-    @apply opacity-100 visible;
-  }
-  .js-active-menu .menu-btn {
-    @apply bg-[#fff6] hover:bg-[#fff4];
-  }
-  .js-active-menu .menu-btn :first-child {
-    @apply -mb-px rotate-45;
-  }
-  .js-active-menu .menu-btn :nth-child(2) {
-    @apply hidden;
-  }
-  .js-active-menu .menu-btn :last-child {
-    @apply mb-0 -mt-px -rotate-45;
   }
 }
